update tests to use mockito (#3048)
* update tests to use mockito

* add tests for controllers